# simple-prover

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  env.example  run_prover.sh  simple_proof.json
fixture/: opacityCA.crt
prover/: simple_prover.rs  simple_verifier.rs
src/: lib.rs
